menu seciton has updated with new image

--- a/index.html
+++ b/index.html
@@ -69,31 +69,31 @@
             <p class="menu_sub"> Our Menu Items , What we provide at cafe.</p>
             <div class="menu_items">
                 <div class="menu_card">
-                    <img src="images/office.png" alt="Chicken Tikka Masala" class="food_pic">
+                    <img src="images/chicken-tikka.png" alt="Chicken Tikka Masala" class="food_pic">
                     <h3>Chicken Tikka Masala</h3>
                     <p class="food_desc"> Lorem ipsum dolor sit amet, elit.</p>
                     <span class="food_price">₹250</span>
                 </div>
                 <div class="menu_card">
-                    <img src="images/service.png" alt="Palak Paneer" class="food_pic">
+                    <img src="images/paalak-paneer.png" alt="Palak Paneer" class="food_pic">
                     <h3>Palak Paneer</h3>
                     <p class="food_desc"> Lorem ipsum dolor sit amet, elit.</p>
                     <span class="food_price">₹220</span>
                 </div>
                 <div class="menu_card">
-                    <img src="images/counter.png" alt="Vegetable Biryani" class="food_pic">
+                    <img src="images/veg-biryani.png" alt="Vegetable Biryani" class="food_pic">
                     <h3>Vegetable Biryani</h3>
                     <p class="food_desc"> Lorem ipsum dolor sit amet, elit.</p>
                     <span class="food_price">₹180</span>
                 </div>
                 <div class="menu_card">
-                    <img src="images/about-img.png" alt="Butter Chicken" class="food_pic">
+                    <img src="images/butter-chicken.png" alt="Butter Chicken" class="food_pic">
                     <h3>Butter Chicken</h3>
                     <p class="food_desc">Lorem ipsum dolor sit amet, elit.</p>
                     <span class="food_price">₹280</span>
                 </div>
                 <div class="menu_card">
-                    <img src="images/hero.png" alt="Naan Bread" class="food_pic">
+                    <img src="images/naan-bread.png" alt="Naan Bread" class="food_pic">
                     <h3>Naan Bread</h3>
                     <p class="food_desc"> Lorem ipsum dolor sit amet, elit.</p>
                     <span class="food_price">₹100</span>
